--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,22 +7,58 @@
     font-family: 'Roboto-My';
 }
 
+html {
+    background-color: #000000;
+}
+
+/* header */
 
 header {
     display: flex;
-    justify-content: center;
-    background-color: #DE1500;
+    flex-direction: column;
+    align-items: center;
+    height: 100px;
+    background-image: url(/src/img/header-footer.JPG);
+    background-position: 25% 15%;
     color: #FFDBD7;
 }
 
-body {
-    background-color: #FF8478;
+.logo {
+    display: flex;
+    justify-content: center;
+    background-color: #1b0808;
+    height: 100vh;
+    width: 99vw;
+    background-color: rgba(0, 0, 0, 0.5);
 }
+
+h3 {
+    text-align: center;
+    font-size: 30px;
+    background: -webkit-linear-gradient(0.55turn, #f70202, #f5f100);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    flex-grow: 1;
+    width: 450px;
+}
+
+.hr {
+    box-sizing: border-box;
+    width: 100%;
+    height: 3px;
+    background-color: hsl(0, 0%, 0%);
+}
+
+/* main container */
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url(/src/img/bg.JPG);
+    background-size: cover;
+    background-position: center;
+    transition: 1.5s;
 }
 
 .result-container {
@@ -30,7 +66,8 @@ body {
     justify-content: center;
     align-items: center;
     gap: 100px;
-    background-color: #FF8478;
+    background-color: rgba(178, 0, 21, 0.1);
+    border-radius: 30px;
     width: 50vw;
     height: 40vh;
 }
@@ -39,14 +76,12 @@ body {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    gap: 30px
+    gap: 30px;
 }
 
 .score-human {
     font-size: 70px;
 }
-
-
 
 .computer-container {
     display: flex;
@@ -64,14 +99,32 @@ body {
     gap: 70px;
 }
 
+#rock {
+    width: 100px;
+    height: 100px;
+    border-radius: 35px;
+}
+
+#paper {
+    width: 100px;
+    height: 100px;
+    border-radius: 35px;
+}
+
+#scissors {
+    width: 100px;
+    height: 100px;
+    border-radius: 35px;
+}
+
 .icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 110px;
-    height: 110px;
+    width: 100px;
+    height: 100px;
     border: 2px solid #FF1800;
-    border-radius: 5px;
+    border-radius: 35px;
     box-shadow: 0 5px 15px 0 #FF1800;
 }
 
@@ -97,19 +150,27 @@ footer {
     display: flex;
     justify-content: center;
     flex-shrink: 0;
+    height: 40px;
+    background-image: url(/src/img/header-footer.JPG);
+    background-position: 25% 33%;
     background-color: #DE1500;
 }
 
 .footer-container {
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 30px
+    width: 99vw;
+    background-color: rgba(0, 0, 0, 0.7);
+    gap: 30px;
 }
 
 a {
     text-decoration: none;
     font-size: 20px;
-    color: #FFDBD7
+    background: -webkit-linear-gradient(0.55turn, #f70202, #f5f100);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* modal window */
@@ -120,12 +181,11 @@ body {
 
 .modalBackground {
     display: none;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.5);
     position: fixed;
     width: 100%;
     height: 100%;
     cursor: pointer;
-    /* указываем z-индекс для корректного наслаивания */
     z-index: 1;
 }
 
@@ -136,9 +196,23 @@ body {
     top: calc(50% - 250px);
     left: calc(50% - 175px);
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
+    background-image: url(/src/img/header-footer.JPG);
+    background-size: 650px 350px;
+    background-position: 45% 15%;
     cursor: default;
     padding: 40px 20px;
+    border: 2px solid #000000;
+    box-shadow: 0px 0px 35px #000000;
+    animation: Wrapper 1s;
+}
+
+@keyframes Wrapper{
+  0%{
+    transform: translateY(-500px);
+  }
+  100%{
+    transform: translateY(0px);
+  }
 }
 
 .modalClose {
@@ -149,9 +223,10 @@ body {
     width: 30px;
     height: 30px;
     cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.403);
+    border-radius: 25px;
 }
 
-/* сама картинка кнопочки закрытия */
 .modalClose img {
     margin: 3px;
     width: 24px;
@@ -159,7 +234,11 @@ body {
 }
 
 .modalWindow {
+    color: #02aad0;
+    text-shadow: 0px 0px 20px #02aad0;
     position: relative;
     font-size: 50px;
     text-align: center;
+    border-radius: 35px;
+    background-color: rgba(0, 0, 0, 0.6);
 }
