--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,6 +79,37 @@ h3 {
     gap: 30px;
 }
 
+.icon-main {
+    animation: wrapper 0.2s;
+}
+
+@keyframes wrapper {
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+    10% {
+        opacity: 0.2;
+        transform: scale(0.3);
+    }
+    30% {
+        opacity: 0.4;
+        transform: scale(0.6);
+    }
+    50% {
+        opacity: 0.6;
+        transform: scale(0.8);
+    }
+    70% {
+        opacity: 0.8;
+        transform: scale(1.2);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 .score-human {
     font-size: 70px;
 }
